--- a/index.html
+++ b/index.html
@@ -1,20 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="assets/logo1.png" type="image/png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+    rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   <title>Flower Market</title>
 </head>
+
 <body>
   <header>
+    <nav class="flex w-95 lg:w-5xl h-20 justify-between items-center mt-4 m-auto ">
+      <img src="assets/logo.png" alt="brand-logo">
 
+      <div class=" flex">
+        <ul class="hidden lg:flex gap-10 text-[rgba(0,0,0,0.5)]">
+          <li> <a href=""><strong>Home</strong></a></li>
+          <li><a href="">Shop</a></li>
+          <li><a href="">About Us</a></li>
+        </ul>
+
+        <div>
+          <ul class="ml-10">
+            <li class="text-black"><a class="flex" href=""><img class="w-6 h-6 mr-2" src="assets/shopping-cart.png"
+                  alt="Cart-logo">Cart ($56)</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <section class="flex flex-col-reverse gap-10 w-95 lg:flex-row lg:items-end lg:w-5xl m-auto mt-20 lg:mt-30">
+      <div>
+        <h1 style="font-family: 'Noto Serif', serif;" class="text-5xl font-bold mb-15">ALWAYS <span
+            class="text-[#E95A08] ">FRESH</span><br> <span class="text-[#E95A08]">FLOWERS</span> </h1>
+        <p class="text-[rgba(0,0,0,0.5)] text-xl">Indulge your senses with the beauty and fragrance of our fresh flower
+          shop. From classic roses to exotic blooms, we
+          offer a wide variety of fresh flowers that are perfect for any occasion.</p>
+      </div>
+
+      <img src="assets/hero-flower.png" alt="flower">
+    </section>
   </header>
   <main>
 
   </main>
   <footer>
-    
+
   </footer>
 </body>
+
 </html>
