added our plants part

--- a/index.html
+++ b/index.html
@@ -48,7 +48,71 @@
     </section>
   </header>
   <main>
+    <section class="w-95 lg:w-5xl m-auto text-center mt-20 lg:mt-40">
+      <div class="text-center">
+        <h2 style="font-family: 'Noto Serif', serif;" class="text-5xl font-bold mb-4"><span
+            class="text-[#E95A08] ">Our</span> Plants</h2>
+        <p class=" text-[rgba(0,0,0,0.5)] justify-between text-xl m-auto lg:w-2xl mb-10">Indulge your senses with the
+          beauty and
+          fragrance of our fresh flower
+          shop. From classic roses to exotic blooms, we
+          offer a wide variety of fresh.
+        </p>
+      </div>
 
+      <div class="grid grid-cols-2 gap-4 lg:grid-cols-4 lg:gap-6">
+        <div class="w-45 lg:w-60 text-center">
+          <img class="w-45 lg:w-60" src="assets/sample-flower-image.png" alt="lily blossom">
+          <h3 class="mb-2">Lily Blossom</h3>
+          <P class="mb-2"><strong>20 USD</strong></P>
+          <button class="w-45 lg:w-60 bg-[#E95A08] hover:bg-red-400 px-4 py-2 ">ADD TO CART</button>
+        </div>
+        <div class="w-45 lg:w-60 text-center">
+          <img class="w-45 lg:w-60" src="assets/sample-flower-image.png" alt="lily blossom">
+          <h3 class="mb-2">Lily Blossom</h3>
+          <P class="mb-2"><strong>20 USD</strong></P>
+          <button class="w-45 lg:w-60 bg-[#E95A08] hover:bg-red-400 px-4 py-2 ">ADD TO CART</button>
+        </div>
+        <div class="w-45 lg:w-60 text-center">
+          <img class="w-45 lg:w-60" src="assets/sample-flower-image.png" alt="lily blossom">
+          <h3 class="mb-2">Lily Blossom</h3>
+          <P class="mb-2"><strong>20 USD</strong></P>
+          <button class="w-45 lg:w-60 bg-[#E95A08] hover:bg-red-400 px-4 py-2 ">ADD TO CART</button>
+        </div>
+        <div class="w-45 lg:w-60 text-center">
+          <img class="w-45 lg:w-60" src="assets/sample-flower-image.png" alt="lily blossom">
+          <h3 class="mb-2">Lily Blossom</h3>
+          <P class="mb-2"><strong>20 USD</strong></P>
+          <button class="w-45 lg:w-60 bg-[#E95A08] hover:bg-red-400 px-4 py-2 ">ADD TO CART</button>
+        </div>
+      </div>
+      <div class="grid grid-cols-2 gap-4 lg:grid-cols-4 lg:gap-6 mt-4 lg:mt-20">
+        <div class="w-45 lg:w-60 text-center">
+          <img class="w-45 lg:w-60" src="assets/sample-flower-image.png" alt="lily blossom">
+          <h3 class="mb-2">Lily Blossom</h3>
+          <P class="mb-2"><strong>20 USD</strong></P>
+          <button class="w-45 lg:w-60 bg-[#E95A08] hover:bg-red-400 px-4 py-2 ">ADD TO CART</button>
+        </div>
+        <div class="w-45 lg:w-60 text-center">
+          <img class="w-45 lg:w-60" src="assets/sample-flower-image.png" alt="lily blossom">
+          <h3 class="mb-2">Lily Blossom</h3>
+          <P class="mb-2"><strong>20 USD</strong></P>
+          <button class="w-45 lg:w-60 bg-[#E95A08] hover:bg-red-400 px-4 py-2 ">ADD TO CART</button>
+        </div>
+        <div class="w-45 lg:w-60 text-center">
+          <img class="w-45 lg:w-60" src="assets/sample-flower-image.png" alt="lily blossom">
+          <h3 class="mb-2">Lily Blossom</h3>
+          <P class="mb-2"><strong>20 USD</strong></P>
+          <button class="w-45 lg:w-60 bg-[#E95A08] hover:bg-red-400 px-4 py-2 ">ADD TO CART</button>
+        </div>
+        <div class="w-45 lg:w-60 text-center">
+          <img class="w-45 lg:w-60" src="assets/sample-flower-image.png" alt="lily blossom">
+          <h3 class="mb-2">Lily Blossom</h3>
+          <P class="mb-2"><strong>20 USD</strong></P>
+          <button class="w-45 lg:w-60 bg-[#E95A08] hover:bg-red-400 px-4 py-2 ">ADD TO CART</button>
+        </div>
+      </div>
+    </section>
   </main>
   <footer>
 
