added flower and plants lover section

--- a/index.html
+++ b/index.html
@@ -113,6 +113,30 @@
         </div>
       </div>
     </section>
+    <div class="w-95 mt-10 lg:mt-2 lg:w-5xl m-auto">
+      <div class="hidden lg:block lg:w-72 lg:h-72 lg:relative lg:top-42 lg:left-95"><img src="assets/trusted-badge.png"
+          alt="badge"></div>
+
+      <div class="flex flex-col lg:flex-row w-90 lg:w-5xl m-auto gap-10 lg:gap-30  ">
+        <img src="assets/flower-store.png" alt="flower store">
+        <div class="m-auto">
+          <h2 style="font-family: 'Noto Serif', serif;" class="text-3xl  lg:text-4xl mb-10 font-bold">Flower & Plants
+            Lover</h2>
+          <ol class="text-[rgba(0,0,0,0.5)] text-xl list-[disc] ">
+            <li>
+              Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic
+              blooms, we offer a wide variety of fresh.
+            </li>
+            <li>
+              Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic
+              blooms, we offer a wide variety of fresh.
+            </li>
+            <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic
+              blooms, we offer a wide variety of fresh.</li>
+          </ol>
+        </div>
+      </div>
+    </div>
   </main>
   <footer>
 
