added latest deals section

--- a/index.html
+++ b/index.html
@@ -137,6 +137,41 @@
         </div>
       </div>
     </div>
+
+    <section class=" w-95 lg:w-5xl m-auto text-center mt-20 lg:mt-30 mb-20">
+      <div class="text-center">
+        <h3 style="font-family: 'Noto Serif', serif;" class="text-5xl mb-10"><span class="text-[#E95A08]">Latest</span>
+          Deals</h3>
+        <p class=" text-[rgba(0,0,0,0.5)]  justify-between text-xl m-auto lg:w-2xl mb-10 ">Indulge your senses
+          with the beauty and fragrance of our fresh flower
+          shop.
+          From classic roses to exotic blooms, we
+          offer a wide variety of fresh.</p>
+      </div>
+    </section>
+    <section class="flex ">
+      <div class="flex flex-col lg:flex-row
+     w-95  lg:w-5xl m-auto gap-6 justify-center items-center" style="font-family: 'Noto Serif', serif;">
+        <div>
+          <div
+            class="w-95 lg:w-[350px] h-45 bg-[url(/assets/deal-bloom.png)] bg-cover flex flex-col justify-center items-center mb-8 rounded-[10px]">
+            <p class="text-[#FFFFFF] font-bold text-xl mb-4">60% Off | Bloom Plant</p>
+            <a class="text-[#FFFFFF] font-bold underline decoration-solid" href="">Shop Now</a>
+          </div>
+          <div
+            class="w-95 lg:w-[350px] h-45 bg-[url(/assets/deal-ana.png)] bg-cover flex flex-col justify-center items-center rounded-[10px]">
+            <p class="text-[#FFFFFF] font-bold text-xl mb-4">30% Off | Ana Plant</p>
+            <a class="text-[#FFFFFF] font-bold underline decoration-solid" href="">Shop Now</a>
+          </div>
+        </div>
+
+        <div
+          class="w-95 lg:w-[650px] h-45 lg:h-98 bg-[url(/assets/deal-zabo.png)] bg-cover flex flex-col justify-center items-center rounded-[10px]">
+          <p class="text-[#FFFFFF] font-bold text-xl lg:text-4xl mb-4 ">25% Off | Zabo Plant</p>
+          <a class="text-[#FFFFFF] font-bold underline decoration-solid lg:text-2xl" href="">Shop Now</a>
+        </div>
+      </div>
+    </section>
   </main>
   <footer>
 
