--- a/index.html
+++ b/index.html
@@ -172,6 +172,18 @@
         </div>
       </div>
     </section>
+    <section class="mt-10 lg:mt-30">
+      <div
+        class="bg-[url(/assets/news-letter-bg.png)] bg-cover h-70 lg:h-130  flex flex-col justify-center items-center ">
+        <h4 style="font-family: 'Noto Serif', serif;"
+          class="text-[#FFFFFF] font-bold text-2xl lg:text-5xl mb-4 lg:mb-10">
+          Join the colorful Bunch</h4>
+        <div><input class="w-55 lg:w-150 bg-[#FFFFFF] px-4 py-4" type="email" placeholder="Write email"><button
+            class="text-white  w-25 lg:w-50 bg-[#E95A08] hover:bg-red-400 px-4 py-4">Subscribe</button>
+        </div>
+
+      </div>
+    </section>
   </main>
   <footer>
 
