--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     </section>
     <section class="mt-10 lg:mt-30">
       <div
-        class="bg-[url(/assets/news-letter-bg.png)] bg-cover h-70 lg:h-130  flex flex-col justify-center items-center ">
+        class="bg-[url(./assets/news-letter-bg.png)] bg-cover h-70 lg:h-130  flex flex-col justify-center items-center ">
         <h4 style="font-family: 'Noto Serif', serif;"
           class="text-[#FFFFFF] font-bold text-2xl lg:text-5xl mb-4 lg:mb-10">
           Join the colorful Bunch</h4>
