--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
     </ul>
     <div class="flex h-8 gap-10 items-center">
       <a href=""><img src="assets/icon-linkedin.png" alt=""></a>
-      <a href=""><img src="assets/icon-twitter.png" alt=""></a>
+      <a href=""><img src="assets/icon-twittersite.png" alt=""></a>
       <a href=""><img src="assets/icon-facebook.png" alt=""></a>
       <a href=""><img src="assets/icon-youtube.png" alt=""></a>
     </div>
